Refactor: 일기 저장 로직 변경, 일기 조회 로직 변경해라 - #57