@@ -41,10 +41,6 @@ public class Diary extends BaseEntity {
     private DiaryEmotion emotion;
 
     @Enumerated(EnumType.STRING)
-    @Column(name = "status", nullable = false)
-    private DiaryStatus status;
-
-    @Enumerated(EnumType.STRING)
     @Column(name = "subject")
     private DiarySubject subject;
 
@@ -76,14 +72,13 @@ public class Diary extends BaseEntity {
     @Column(name = "version", nullable = false)
     private Integer version;
 
-    public static Diary ofPublished(DiaryReqSaveDTO requestDTO, Long userId) {
+    public static Diary of(DiaryReqSaveDTO requestDTO, Long userId) {
         return Diary.builder()
                 .title(requestDTO.diaryTitle())
                 .date(requestDTO.diaryDate())
                 .content(requestDTO.diaryContent())
                 .weather(requestDTO.diaryWeather())
                 .emotion(null)
-                .status(DiaryStatus.PUBLISHED)
                 .summary(null)
                 .subject(null)
                 .userId(userId)
@@ -92,27 +87,9 @@ public class Diary extends BaseEntity {
                 .fontSize(requestDTO.diaryFontSize())
                 .thumbnail(
                         (requestDTO.diaryImageUrls() != null && !requestDTO.diaryImageUrls().isEmpty())
-                                ? requestDTO.diaryImageUrls().get(0)
+                                ? requestDTO.diaryImageUrls().getFirst()
                                 : null
                 )
-                .moodBuddyStatus(MoodBuddyStatus.ACTIVE)
-                .build();
-    }
-
-    public static Diary ofDraft(DiaryReqSaveDTO requestDTO, Long userId) {
-        return Diary.builder()
-                .title(requestDTO.diaryTitle())
-                .date(requestDTO.diaryDate())
-                .content(requestDTO.diaryContent())
-                .weather(requestDTO.diaryWeather())
-                .emotion(null)
-                .status(DiaryStatus.DRAFT)
-                .summary(null)
-                .subject(null)
-                .userId(userId)
-                .bookMark(false)
-                .font(requestDTO.diaryFont())
-                .fontSize(requestDTO.diaryFontSize())
                 .moodBuddyStatus(MoodBuddyStatus.ACTIVE)
                 .build();
     }
@@ -123,7 +100,6 @@ public class Diary extends BaseEntity {
         this.content = requestDTO.diaryContent();
         this.weather = requestDTO.diaryWeather();
         this.emotion = null;
-        this.status = DiaryStatus.PUBLISHED;
         this.summary = null;
         this.subject = null;
         this.font = requestDTO.diaryFont();
